--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
                 <input id='open_database' type='file' />
                 Diensplan von ClinicPlanner importieren: <input id='import_html' type='file' />
-
+                
+                <button id="list_mitarbeiter">Mitarbeiter auflisten</button>
                 <hr class='invisible-divider'>
 
                 <div id='tableRecords' class='table-responsive'></div>
